--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -155,18 +155,35 @@ h3, h4 {
     flex-direction: column;
 }
 
+.main-project-card:last-of-type {
+    margin-bottom: 10rem;
+
+}
+
 .main-project-card {
     display: flex;
     flex-direction: column;
+
+    /* display: grid;
+    grid-template-rows: 5vh 150px 50px 2rem; */
 
     position: relative;
 
     margin-bottom: 10rem;
 }
+.main-project-card > * {
+    /* justify-self: end;
+    align-self: center; */
+}
 
 .main-project-card h4 {
     margin: 1rem;
     text-align: center;
+    justify-self: center;
+}
+
+.skills-list, .projects-actions {
+    margin-inline: 1.5rem;
 }
 
 .skills-list {
@@ -178,27 +195,31 @@ h3, h4 {
     align-items: center;
 
     width: 20vw;
-    margin-right: 2rem;
     margin-top: 1rem;
+
+    position: relative;
+    top: 25px;
 }
 
 .skills-list li {
-    margin-bottom: 0.3rem;
+    margin-block: 0.5rem;
     text-transform: uppercase;
     /* text-align: center; */
-    font-size: var(--body2-fs);
+    font-size: var(--small-fs);
+    font-weight: 800;
 }
 
 .projects-actions {
     order: 1;
-    align-self: flex-end;
 
     display: flex;
     justify-content: space-around;
 
     width: 20vw;
-    margin-right: 2rem;
     padding-block: 0.5rem;
+
+    position: relative;
+    top: 35px;
 }
 
 .projects-actions a {
@@ -216,26 +237,45 @@ h3, h4 {
 .main-project-card p {
     order: 2;
 
+    width: 75vw;
+
+    /* margin-top: 5rem; */
     padding: 1rem 1rem 1.5rem 1rem;
 
     background-color: var(--primary300);
     border-radius: 0.5rem;
 
     position: relative;
+    top: 35px;
+}
+.right {
+    align-self: flex-end;
+}
+.left {
+    align-self: flex-start;
 }
 
 .project-img {
     border:1px solid red;
     border-radius: 0.5rem;
-    background-image: url('../images/Screenshot\ 2024-03-27\ at\ 19.41.21.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-
-    height: 25vh;
-    width: 60vw;
-
+    
+    height: 277px;
+    width: 360px;
+    
     position: absolute;
     top: 20%;
-    left: -10%;
 }
+
+.img1 {
+    background-image: url('../images/Screenshot\ 2024-03-27\ at\ 19.41.21.png');
+    left: -40%;
+}
+
+.img2 {
+    background-image: url('../images/Screenshot\ 2024-03-27\ at\ 19.41.21.png');
+    right: -40%;
+}
+
