--- a/assets/style/typeface.css
+++ b/assets/style/typeface.css
@@ -19,6 +19,7 @@
     --h6-fs : 1.2rem;
     --body1-fs : 1rem;
     --body2-fs : 0.833rem;
+    --small-fs : 0.694rem;
     
     /* FONT FAMILY */
     --title-monospace : "Martian Mono", "Lucida Console", monospace;
