--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,6 +5,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 a, a:visited, a:active {
     color: var(--text);
@@ -52,17 +53,20 @@ header {
 .navButton {
     height: 72px;
     width: 72px;
+
     border-radius: 100%;
+
     position: fixed;
     right: 1rem;
     bottom: 3rem;
-    cursor: pointer;
-    z-index: 9998;
     
     display: flex;
     justify-content: center;
     align-items: center;
     
+    z-index: 9999;
+
+    cursor: pointer;
 }
 
 .open {
@@ -83,12 +87,12 @@ nav {
     top: 0;
     left: 0;
 
-    width: 92vw;
+    width: 100vw;
     height: 100vh;
 
     padding: 1rem;
 
-    z-index: 9997;
+    z-index: 9998;
 }
 
 nav ul {
@@ -101,18 +105,17 @@ nav li {
 
     margin-block: 1rem;
     margin-right: 1rem;
-
 }
 
 nav li:first-child {
-    margin-top: 50vh;
+    margin-top: 45vh;
 }
 
-nav .cvLink {
+.cvLink {
     align-self: flex-start;
 
     position: absolute;
-    bottom: 4rem;
+    bottom: 2rem;
     left: 2rem;
 
     height: 72px;
@@ -126,6 +129,19 @@ nav .cvLink {
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    cursor: pointer;
+}
+
+.cvLink a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: var(--primary1100);
+    
+    width: 100%;
+    height: 100%;
 }
 
 nav a {
@@ -193,7 +209,7 @@ h3:after, .more-projects h4:after {
     margin-bottom: 15rem;
     padding: 1rem 1.5rem 5rem 1.5rem;
     border-radius: 30px;
-    background-color: var(--primary200);
+    background-color: var(--primary300);
 
     display: flex;
     flex-direction: column;
@@ -270,7 +286,7 @@ h3:after, .more-projects h4:after {
     margin-block: 1rem;
     padding: 1.5rem;
     border-radius: 30px;
-    background-color: var(--primary200);
+    background-color: var(--primary300);
 
     display: flex;
     flex-direction: column;
@@ -333,7 +349,6 @@ h3:after, .more-projects h4:after {
 .skills-list li {
     margin-block: 0.5rem;
     text-transform: uppercase;
-    /* text-align: center; */
     font-size: var(--small-fs);
     font-weight: 800;
 }
@@ -371,7 +386,7 @@ h3:after, .more-projects h4:after {
     /* margin-top: 5rem; */
     padding: 1rem 1rem 1.5rem 1rem;
 
-    background-color: var(--primary300);
+    background-color: var(--primary400);
     border-radius: 0.5rem;
 
     position: relative;
@@ -424,7 +439,7 @@ h3:after, .more-projects h4:after {
 .project-card {
     margin-block: 1.5rem;
     padding: 0.5rem;
-    background-color: var(--primary200);
+    background-color: var(--primary300);
     border-radius: 0.5rem;
     box-shadow: 0 0 5px var(--secondary100);
 
@@ -482,15 +497,20 @@ h3:after, .more-projects h4:after {
 .button {
     margin: 1rem;
     padding: 0.5rem 1rem;
-    width: 7rem;
-    height: 2rem;
+    width: 8rem;
 
     border-radius: 0.5rem;
-    background-color: var(--primary200);
-    border: 1px solid var(--primary300);
+    background-color: var(--primary300);
+    border: 1px solid var(--primary600);
 
     font-size: var(--body2-fs);
     font-weight: 500;
+    color: var(--primary1100);
+}
+
+.button:hover {
+    background-color: var(--primary400);
+    border-color: var(--primary700);
 }
 
 /* ======= */
@@ -498,7 +518,7 @@ h3:after, .more-projects h4:after {
 /* FOOTER */
 
 footer {
-    background-color: var(--primary200);
+    background-color: var(--primary300);
     padding: 1rem;
     display: flex;
     flex-direction: column;
