--- a/assets/style/variables/typeface.css
+++ b/assets/style/variables/typeface.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&display=swap');
 @font-face {
     font-family: "Konstant Grotesk";
-    src: url('../fonts/NeueKonstantGrotesk-Book.otf');
+    src: url('../../fonts/NeueKonstantGrotesk-Book.otf');
 }
 @font-face {
     font-family: "Hemming Variable";
-    src: url('../fonts/Heming\ Variable\ 2.ttf');
+    src: url('../../fonts/Heming\ Variable\ 2.ttf');
 }
 
 :root {
