fixed html, change nav position top to bottom

--- a/assets/style/images.css
+++ b/assets/style/images.css
@@ -48,8 +48,10 @@
 
 .languages-logos {
     margin-top: 1.5rem;
+    align-self: center;
 }
 
+.course img,
 .languages-logos img {
     align-self: center;
 
