--- a/assets/style/navigation.css
+++ b/assets/style/navigation.css
@@ -39,7 +39,7 @@ nav {
     background-color: var(--background);
 
     position: fixed;
-    top: 0;
+    bottom: 0;
     left: 0;
 
     width: 100vw;
