trying to fix main project card showing under img instead of above

--- a/assets/style/cards.css
+++ b/assets/style/cards.css
@@ -37,7 +37,7 @@
 * Main Project Card
 */
 
-.main-project-card p {
+.main-project-card .card {
     background-color: var(--primary400);
     border-radius: 0.5rem;
 
