--- a/assets/style/layout.css
+++ b/assets/style/layout.css
@@ -24,3 +24,16 @@
 .margin {
     margin: 1.5rem;
 }
+
+@media (min-width: 769px) {
+
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container {
+        width: 70vw;
+    }
+}
