--- a/assets/style/cards.css
+++ b/assets/style/cards.css
@@ -26,11 +26,17 @@
 */
 
 .course-card {
+    line-height: 1.6;
+    
     margin-block: 1.5rem;
     
     align-items: center;
     
     text-align: center;
+}
+
+.course-card p {
+    margin-block: 0.5rem;
 }
 
 /**
@@ -41,7 +47,7 @@
     background-color: var(--primary400);
     border-radius: 0.5rem;
 
-    width: 75vw;
+    width: 85vw;
     padding: 1rem 1rem 1.5rem 1rem;
 
     position: relative;
@@ -103,4 +109,4 @@
 }
 
 @media (min-width: 769px) {
-  
+}
