--- a/assets/style/layout.css
+++ b/assets/style/layout.css
@@ -37,4 +37,26 @@
         width: 50vw;
     }
 
+    html {
+        /* scroll-snap-type: y mandatory; */
+    }
+
+    .layout {
+        height: 100vh;
+        /* margin-top: 5rem; */
+        /* scroll-snap-align: start; */
+    }
+
+    .layout:last-child {
+        height: 80vh;
+    }
+
+    .courses {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-evenly;
+
+        position: relative;
+    }
+
 }
