--- a/assets/style/variables/typeface.css
+++ b/assets/style/variables/typeface.css
@@ -27,3 +27,19 @@
     --body : "Hemming Variable", "Verdana", sans-serif;
     
 }
+
+@media (min-width: 769px) {
+    :root {
+
+        /* FONT SIZES */
+        --h1-fs : 2.986rem;
+        --h2-fs : 2.488rem;
+        --h3-fs : 2.074rem;
+        --h4-fs : 1.728rem;
+        --h5-fs : 1.44rem;
+        --h6-fs : 1.2rem;
+        --body1-fs : 1rem;
+        --body2-fs : 0.833rem;
+        --small-fs : 0.694rem;
+    }
+}
