--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -169,6 +169,7 @@ h3:after,
 }
 
 .main-project-card h4 {
+    order: 0;
     align-self: center;
 }
 
@@ -184,7 +185,7 @@ h3:after,
 }
 
 .skills-list {
-    order: 0;
+    order: 1;
     align-self: flex-end;
 
     flex-direction: column;
@@ -200,7 +201,7 @@ h3:after,
 }
 
 .projects-actions {
-    order: 1;
+    order: 2;
 
     justify-content: space-around;
 
@@ -215,7 +216,7 @@ h3:after,
 }
 
 .main-project-card .card {
-    order: 2;
+    order: 3;
 }
 
 .right {
@@ -377,6 +378,16 @@ footer p {
     /**  
     * PROJECTS SECTION
     */
+
+    .main-project-card .card {
+        order: 1;
+    }
+    .skills-list {
+        order: 2;
+    }
+    .projects-actions {
+        order: 3;
+    }
 
     .more-projects-wrapper {
         display: flex;
